refactor: global 공통 모듈 cleanup 정리